# libdivecomputer_plugin

./: .metadata  README.md  pubspec.yaml
android/: build.gradle  build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/src/main/kotlin/com/example/dive_computer/: BleManager.kt  BleTransport.kt  DiveComputerPlugin.kt  DiveDownloader.kt
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
ios/: libdivecomputer_plugin.podspec
ios/Classes/: BLETransport.swift  DiveComputerPlugin.swift  DiveDownloader.swift
lib/: dive_computer.dart  libdivecomputer_plugin.dart
lib/src/: dive_computer_exception.dart  dive_computer_plugin.dart  libdivecomputer_plugin.dart
lib/src/models/: dc_device_info.dart  dc_dive.dart  dc_dive_computer.dart  dc_dive_mode.dart  dc_download_progress.dart  dc_download_status.dart  dc_gas_mix.dart  dc_sample.dart  dc_status.dart  dc_tank.dart
macos/: dive_computer.podspec  libdivecomputer_plugin.podspec
macos/Classes/: DiveComputerPlugin.swift
test/: dive_computer_method_channel_test.dart  dive_computer_test.dart
(+8 files in other folders)
